MD-5:ajout de texte

--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -13,3 +13,7 @@
 <div *ngIf="data.isAjoutPersonnage">
   <app-add-personnage [fictionId]="fictionId"></app-add-personnage>
 </div>
+
+<div *ngIf="data.isAjoutTexte">
+  <app-add-texte [fictionId]="fictionId"></app-add-texte>
+</div>
