--- a/src/app/components/personnage/add-personnage/add-personnage.component.html
+++ b/src/app/components/personnage/add-personnage/add-personnage.component.html
@@ -18,6 +18,6 @@
     <input matInput placeholder="Année de mort" #persoAnneeMort>
   </mat-form-field>
 
-  <button mat-button (click)="addPersonnage(persoTitre.value, persoDescription.value, fictionId, persoAnneeNaissance.value, persoAnneeMort.value);" class="btn btn-primary">Créer un personnage</button>
+  <button mat-button (click)="addPersonnage(persoTitre.value, persoDescription.value, fictionId, persoAnneeNaissance.value, persoAnneeMort.value);">Créer un personnage</button>
 
 </div>
