--- a/src/app/pages/page-fiction-textes/page-fiction-textes.component.html
+++ b/src/app/pages/page-fiction-textes/page-fiction-textes.component.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="action">
-  <button mat-button>
+  <button mat-button (click)="openDialog()">
     <mat-icon>add</mat-icon>
     Créer un nouveau texte
   </button>
