--- a/src/app/components/texte/add-texte/add-texte.component.html
+++ b/src/app/components/texte/add-texte/add-texte.component.html
@@ -8,7 +8,7 @@
     <textarea matInput placeholder="Description" #texteDescription></textarea>
   </mat-form-field>
 
-  <button mat-button (click)="addTexte(texteTitre.value, texteDescription.value, fictionId);">Créer un texte</button>
+  <button mat-button (click)="addTexte(texteTitre.value, texteDescription.value, indexId);">Créer un texte</button>
 
 </div>
 
