--- a/src/app/pages/page-accueil/page-accueil.component.html
+++ b/src/app/pages/page-accueil/page-accueil.component.html
@@ -2,13 +2,15 @@
 
 <h1>Fictions</h1>
 
-<div>
-  <h2>Test pour une fiction</h2>
+<!--<div>-->
+  <!--<h2>Test pour une fiction</h2>-->
 
-  <p>Récupération d'une fiction</p>
+  <!--<p>Récupération d'une fiction</p>-->
 
-  {{maFiction.titre}}
-</div>
+  <!--{{maFiction.titre}}-->
+
+
+<!--</div>-->
 
 <mat-grid-list cols="3" rowHeight="2:1">
   <mat-grid-tile *ngFor = "let fiction of items" class="carte-item card">
