MD-32:accès nouveau format fiction/textes

--- a/src/app/pages/page-fiction-textes/page-fiction-textes.component.html
+++ b/src/app/pages/page-fiction-textes/page-fiction-textes.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
 
-  <mat-card *ngFor = "let texte of textes" class="item-card">
+  <mat-card *ngFor = "let texte of payload.items" class="item-card">
 
     <mat-card-header>
       <mat-card-title>{{texte.titre}}</mat-card-title>
